--- a/Trackify/build.gradle
+++ b/Trackify/build.gradle
@@ -6,7 +6,7 @@ buildscript {
     }
 
     ext {
-        gradle_version = '7.2.1'
+        gradle_version = "7.2.1"
         kotlin_version = "1.6.21"
         hilt_version = "2.41"
         navigation_version = "2.4.2"
